# unity-scope-vimeo

./: CMakeLists.txt
click/: CMakeLists.txt  apparmor.json  manifest.json.in  vimeo.application.in  vimeo.provider.in  vimeo.service.in
cmake/: FindIntltool.cmake
data/: CMakeLists.txt  com.ubuntu.scopes.vimeo.ini.in  com.ubuntu.vimeo.ini.in  unity-scope-vimeo.ini  unity-scope-vimeo.ini.in
data/accounts/providers/: vimeo.provider
data/accounts/qml-plugins/vimeo/: Main.qml
debian/: changelog  control  copyright  rules
include/: vimeo-preview.h  vimeo-query.h  vimeo-scope.h
include/vimeo/api/: channel.h  client.h  config.h  login.h  simple-oauth.h  video.h
include/vimeo/scope/: localisation.h  preview.h  query.h  scope.h  vimeo-preview.h  vimeo-query.h  vimeo-scope.h
po/: POTFILES.in  ca.po  de.po  en_GB.po  es.po  fr.po  hu.po  it.po  ku.po  nl.po  pl.po  pt.po  ru.po  unity-scope-vimeo.pot
src/: CMakeLists.txt  vimeo-preview.cpp  vimeo-query.cpp  vimeo-scope.cpp
src/vimeo/api/: channel.cpp  client.cpp  login.cpp  simple-oauth.cpp  video.cpp
src/vimeo/scope/: preview.cpp  query.cpp  scope.cpp  vimeo-preview.cpp  vimeo-query.cpp  vimeo-scope.cpp
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt  vimeo-functional-tests.cpp
tests/server/: server.py
tests/unit/: CMakeLists.txt  test-vimeo-scope.cpp
tests/unit/vimeo/scope/: test-vimeo-scope.cpp
